--- a/requirements.txt
+++ b/requirements.txt
@@ -75,7 +75,7 @@ rsa==4.9
 scipy==1.10.1
 shellingham==1.5.0.post1
 simplify==0.1.10
-simplisafe-python @ file:///D:/gitsrc/simplisafe-python
+simplisafe-python 
 six==1.16.0
 soupsieve==2.3.2.post1
 tomli==2.0.1
