--- a/requirements.txt
+++ b/requirements.txt
@@ -1,96 +1,23 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
-arrow==1.2.3
-arweave-python-client==1.0.18
-async-timeout==4.0.2
-attrs==21.4.0
-awkward==2.2.0
-awkward-cpp==15
-backoff==2.1.2
-beautifulsoup4==4.11.1
-build==0.10.0
-CacheControl==0.12.11
-CD==1.1.0
-certifi==2022.5.18.1
-cffi==1.15.1
-charset-normalizer==2.0.12
-cleo==2.0.1
-click==8.1.3
-colorama==0.4.6
-crashtest==0.4.1
-cryptography==38.0.4
-distlib==0.3.4
-docopt==0.6.2
-dulwich==0.21.5
-ecdsa==0.18.0
-et-xmlfile==1.1.0
-filelock==3.12.0
-frozenlist==1.3.0
-html5lib==1.1
-idna==3.3
-iminuit==2.21.3
-importlib-metadata==6.6.0
-installer==0.7.0
-jaraco.classes==3.2.3
-jsonpatch==1.32
-jsonpointer==2.3
-jsonschema==4.17.3
-keyring==23.13.1
-lockfile==0.12.2
-loguru==0.6.0
-more-itertools==9.1.0
-msgpack==1.0.5
-multidict==6.0.2
-numpy==1.24.3
-openai==0.27.6
-openpyxl==3.1.2
-packaging==23.1
-pandas==2.0.1
-pandas-stubs==2.0.1.230501
-pexpect==4.8.0
-pipreqs==0.4.13
-pkginfo==1.9.6
-platformdirs==2.5.2
-poetry==1.4.2
-poetry-core==1.5.2
-poetry-plugin-export==1.3.1
-psutil==5.9.4
-ptyprocess==0.7.0
-pyasn1==0.4.8
-pycparser==2.21
-pycryptodome==3.16.0
-pyhf==0.7.2
-PyNaCl==1.5.0
-pyproject_hooks==1.0.0
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-python-jose==3.3.0
-pytz==2022.1
-pywin32-ctypes==0.2.0
-PyYAML==6.0
-rapidfuzz==2.15.1
-requests==2.27.1
-requests-toolbelt==0.10.1
-rsa==4.9
-scipy==1.10.1
-shellingham==1.5.0.post1
+
 simplify==0.1.10
 simplisafe-python 
-six==1.16.0
-soupsieve==2.3.2.post1
-tomli==2.0.1
-tomlkit==0.11.8
-tqdm==4.65.0
-trove-classifiers==2023.5.2
-types-pytz==2023.3.0.0
-typing_extensions==4.5.0
-tzdata==2023.3
-urllib3==1.26.9
-virtualenv==20.14.1
-voluptuous==0.13.1
-webencodings==0.5.1
-websockets==10.3
-win32-setctime==1.1.0
-yarg==0.1.9
-yarl==1.7.2
-zipp==3.15.0
+
+aniso8601==7.0.0
+attrs==19.1.0
+certifi==2019.6.16
+chardet==3.0.4
+click==7.0
+flask-restplus==0.13.0
+flask==1.1.1
+idna==2.8
+itsdangerous==1.1.0
+jinja2==2.11.3
+jsonschema==3.0.2
+markupsafe==1.1.1
+pyrsistent==0.15.4
+pytz==2019.2
+requests==2.22.0
+gpiozero
+six==1.12.0
+urllib3
+werkzeug==0.15.5
